Tue Jun 21 18:14:46 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Fixed typo in ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
          decision tree. Thanks to Phil Mesnier <mesnier_p@ociweb.com>
          for his help in connecting it to scoreboard warnings.

Mon Jun 20 17:39:01 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Another tweak to ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII's
          logic aimed at warnings on FC6, FC8, FC12, and FC15.

Mon Jun 20 17:17:26 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/config-win32-mingw.h:
        * ace/Basic_Types.h:

          - Moved the definition of ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
            to the MinGW config file.

          - Added #define ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE 1 to
            the MinGW config file, so that, for generated IDL long
            double constants, the argument will agree with the
            print format string. MinGW doesn't support long double
            in the print format.

Fri Jun 17 16:48:29 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Another tweak to ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII's
          conditional definition to eliminate warnings on FC12
          and FC15.

Fri Jun 17 12:48:31 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Removed the 'L' from the version of
          ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII targeted at MinGW
          platforms. That platform apparently doesn't support that
          part of the C print format spec.

Thu Jun 16 13:31:16 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Changed the logic of what ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
          expands to in order to eliminate warnings on FC6 and FC8.

Wed Jun 15 13:10:40 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
