@@ -832,19 +832,6 @@ ACE_END_VERSIONED_NAMESPACE_DECL
 #  endif /* defined (PRIu64) */
 #endif /* ACE_UINT64_FORMAT_SPECIFIER */
 
-#if !defined (ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII)
-#  if defined (ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE) && \
-              (ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE == 1)
-#    if defined (NONNATIVE_LONGDOUBLE)
-#      define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16G"
-#    else
-#      define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%24.16GL"
-#    endif /* defined (NONNATIVE_LONGDOUBLE) */
-#  else
-#    define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16LGL"
-#  endif /* ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE */
-#endif /* ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII */
-
 #if !defined (ACE_SSIZE_T_FORMAT_SPECIFIER_ASCII)
 # if defined (ACE_WIN64)
 #  define ACE_SSIZE_T_FORMAT_SPECIFIER_ASCII "%I64d"
